Refactoring (#205)
* RPC update

* refactoring